Change BSDetailViewController from UIViewController to UITableViewController. This will allow easier display and alignment of text. Change iPhone storyboard.
TODO: Change iPad storyboard.

--- a/BLELister/Base.lproj/Main_iPhone.storyboard
+++ b/BLELister/Base.lproj/Main_iPhone.storyboard
@@ -46,7 +46,7 @@
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <segue destination="Ah7-4n-0Wa" kind="push" identifier="showDetail" id="jUr-3t-vfg"/>
+                                    <segue destination="K4N-Mv-XcK" kind="push" identifier="showDetail" id="8SE-o0-Its"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -62,52 +62,34 @@
             </objects>
             <point key="canvasLocation" x="459" y="64"/>
         </scene>
-        <!--Detail View Controller - Detail-->
-        <scene sceneID="Cn3-H9-jdl">
+        <!--Detail View Controller-->
+        <scene sceneID="kYu-Xd-GJi">
             <objects>
-                <viewController title="Detail" id="Ah7-4n-0Wa" customClass="BSDetailViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uHa-vD-itB"/>
-                        <viewControllerLayoutGuide type="bottom" id="6wd-JQ-RcF"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="MMQ-IT-qOo">
+                <tableViewController id="K4N-Mv-XcK" customClass="BSDetailViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WCb-1I-BGH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lei-5M-9Gs" userLabel="uuidText">
-                                <rect key="frame" x="20" y="101" width="261" height="28"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="28" id="Ybx-hR-SVG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UUID" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n6s-fc-fRw" userLabel="uuidLabel">
-                                <rect key="frame" x="20" y="72" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="top" secondItem="n6s-fc-fRw" secondAttribute="bottom" constant="8" symbolic="YES" id="T3q-Hi-yZh"/>
-                            <constraint firstItem="n6s-fc-fRw" firstAttribute="leading" secondItem="Lei-5M-9Gs" secondAttribute="leading" id="Wr5-rS-ogW"/>
-                            <constraint firstItem="n6s-fc-fRw" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" symbolic="YES" id="nf6-3a-Hzy"/>
-                            <constraint firstItem="n6s-fc-fRw" firstAttribute="top" secondItem="uHa-vD-itB" secondAttribute="bottom" constant="20" symbolic="YES" id="vcH-Fa-ItD"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Detail" id="cra-N8-TIN"/>
-                    <connections>
-                        <outlet property="uuidText" destination="Lei-5M-9Gs" id="syL-ce-vWv"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="detailCell" id="jVi-QP-Jew">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jVi-QP-Jew" id="cDp-b7-uub">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="K4N-Mv-XcK" id="X93-i1-O6u"/>
+                            <outlet property="delegate" destination="K4N-Mv-XcK" id="lDn-bR-Eew"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="AU3-h5-UDj"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xga-Px-1yT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="902" y="64"/>
+            <point key="canvasLocation" x="879" y="70"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
