In iPhone storyboard set title to Detail. The detail view controller will re-set title.

--- a/BLELister/Base.lproj/Main_iPhone.storyboard
+++ b/BLELister/Base.lproj/Main_iPhone.storyboard
@@ -62,7 +62,7 @@
             </objects>
             <point key="canvasLocation" x="459" y="64"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Detail View Controller - Detail-->
         <scene sceneID="kYu-Xd-GJi">
             <objects>
                 <tableViewController id="K4N-Mv-XcK" customClass="BSDetailViewController" sceneMemberID="viewController">
@@ -85,11 +85,11 @@
                             <outlet property="delegate" destination="K4N-Mv-XcK" id="lDn-bR-Eew"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="AU3-h5-UDj"/>
+                    <navigationItem key="navigationItem" title="Detail" id="AU3-h5-UDj"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xga-Px-1yT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="879" y="70"/>
+            <point key="canvasLocation" x="879" y="64"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
