--- a/BLELister/Base.lproj/Main.storyboard
+++ b/BLELister/Base.lproj/Main.storyboard
@@ -115,6 +115,9 @@
                                 <rect key="frame" x="142" y="340" width="91" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Connect"/>
+                                <connections>
+                                    <action selector="connectTapped:" destination="JEX-9P-axG" eventType="touchUpInside" id="Pnf-VJ-d4a"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
